--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,8 @@ name: Александра Находкина
 description: Студентка 3 курса ИМИ
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/haskaqwerty/haskaqwerty.github.io/blob/master/images/avatar.jpg
+avatar: https://raw.githubusercontent.com/haskaqwerty/haskaqwerty.github.io/master/images/avatar.jpg
+
 #https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
